# CryptoMarketWatch

./: CMakeLists.txt  README.md  configmanager.cpp  configmanager.h  globals.cpp  globals.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  marketwatchdockwindow.cpp  marketwatchdockwindow.h  marketwatchmodel.cpp  marketwatchmodel.h  orderbookwindow.cpp  orderbookwindow.h  orderbookwindow.ui  protocol.h  version.h  websocketconnection.cpp  websocketconnection.h
